<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.francescosalamone.backingapp.Fragment.StepDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/portrait_exoplayer_container"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            </FrameLayout>

            <ImageView
                android:id="@+id/step_thumbnail_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/step_image"
                app:layout_constraintTop_toBottomOf="@+id/portrait_exoplayer_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/step_description_fragment_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="16sp"
                tools:text="Descrizione step"
                app:layout_constraintTop_toBottomOf="@+id/step_thumbnail_iv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/prev_step_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/previous_step"
                app:layout_constraintTop_toBottomOf="@+id/step_description_fragment_tv"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:id="@+id/next_step_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/next_step"
                app:layout_constraintTop_toTopOf="@+id/prev_step_bt"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
